# metamath-logic

./: .gitignore  .skfd  AUTHORING_STYLE_GUIDE.md  LEMMA_CATALOGUE.md  README.md  dv_manifest.json  prove_stackexchange.py  pyproject.toml  release-unit.json
.github/workflows/: ci.yml  release.yml
docs/: ENGINEERING_GUARDRAILS.md  LOGIC_MIGRATION_GUIDE.md  MODULE_PLAN.md  PREDICATE_HILBERT_MODULES.md  PROPOSITIONAL_HILBERT_MODULES.md
src/logic/: _build.py  build.py  dv_contracts.py
src/logic/catalog_v1/: __init__.py  __init__.pyi  _embedded.py  facade.json
src/logic/fol/: __init__.py  _builtins.py  _internal.py  _structures.py  _system.py  axioms.py  calculus.py  foundation.py  language.py  metamath_binding.py  notation.py  quantified_equality.py  rules.py  substitution_axioms.py  systems.py  theorems.py  uniqueness.py
src/logic/logical_systems/: intuitionistic_logic.py  syllogistic_logic.py
src/logic/predicate/: equality.py  membership_predicate.py  quantification.py  substitution.py  uniqueness.py
src/logic/predicate/hilbert/: __init__.py  _builtins.py  _internal.py  _structures.py  axioms.py  definitions.py  lemmas.py  system.py  theorems.py
src/logic/prop/: __init__.py  _builtins.py  _internal.py  _semantic_proofs.py  _structures.py  _syntactic.py  _system.py  alternative_axiomatizations.py  axiom_systems.py  axioms.py  calculus.py  circuits.py  conjunction.py  conjunction_inference.py  connectives.py  core.py  equivalence.py  language.py  metamath_binding.py  notation.py  rules.py  ternary.py  ternary_inference.py  theorems.py
src/logic/propositional/: alternative_axiom_systems.py  boolean_circuits.py  conditional.py  conjunction.py  disjunction.py  equivalence.py  hilbert_axioms.py  implication.py  inference.py  mixed_connectives.py  nand.py  nary_connectives.py  negation.py  nor.py  syntax.py  truth_constants.py  truth_tables.py  weak_deduction.py  xor.py
src/logic/propositional/hilbert/: __init__.py  _builtins.py  _internal.py  _structures.py  _syntactic.py  adder.py  axioms.py  conjunction.py  constants.py  definitions.py  disjunction.py  equivalence.py  implication.py  lemmas.py  negation.py  setmm_comments.py  stoic.py  syllogism.py  theorems.py  truth_tables.py
src/logic/propositional/hilbert/axiomatizations/: __init__.py  lukasiewicz.py  meredith.py  minimal_implicational.py  nicod.py  russell_bernays.py  tarski_bernays_wajsberg.py
tests/: public-source-test-authority-v2.json  test_catalog_v1.py  test_catalogue_sync.py  test_predicate_builtins.py  test_proof_surface.py  test_propositional_scope.py  test_public_package_v2.py  test_smoke.py
tools/: generate_lemma_catalogue.py  run_skfd.py
wiki/: README.md  pm2_18.md
