[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metamath-logic"
version = "0.0.11"
description = "Logic definitions for Metamath projects"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
authors = [{ "name" = "Mingli Yuan", "email" = "mingli.yuan@gmail.com" }]
maintainers = [{ "name" = "Mingli Yuan", "email" = "mingli.yuan@gmail.com" }]
keywords = ["metamath", "proof", "proof-scaffold", "logic"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Programming Language :: Python", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14", "Topic :: Software Development :: Build Tools"]
readme = "README.md"
dependencies = [
    "proof-scaffold==0.0.13",
    "metamath-setmm-provider==0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/epistemic-frontier/metamath-logic"
"Repository" = "https://github.com/epistemic-frontier/metamath-logic"
"Issues" = "https://github.com/epistemic-frontier/metamath-logic/issues"

[dependency-groups]
dev = [
    "mypy>=1.8",
    "pytest>=8",
    "ruff>=0.6",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"logic" = ["py.typed"]

[tool.setuptools.data-files]
"share/metamath-logic" = ["release-unit.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.uv.sources]
metamath-setmm-provider = { url = "https://raw.githubusercontent.com/epistemic-frontier/proof-scaffold/99c7b4d4a31998b1576104292c99eeb592c03a60/providers/setmm/metamath_setmm_provider-0.1.0-py3-none-any.whl" }

[tool.ruff.lint.per-file-ignores]
"src/**/*.py" = ["I001"]
